; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/octeon-sdk/extr_cvmx-l2c.c_cvmx_l2c_get_hw_way_partition2.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/octeon-sdk/extr_cvmx-l2c.c_cvmx_l2c_get_hw_way_partition2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OCTEON_CN68XX = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [26 x i8] c"only one IOB on this chip\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cvmx_l2c_get_hw_way_partition2() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @OCTEON_CN68XX, align 4
  %3 = call i32 @OCTEON_IS_MODEL(i32 %2)
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %7, label %5

5:                                                ; preds = %0
  %6 = call i32 @cvmx_warn(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  store i32 -1, i32* %1, align 4
  br label %11

7:                                                ; preds = %0
  %8 = call i32 @CVMX_L2C_WPAR_IOBX(i32 1)
  %9 = call i32 @cvmx_read_csr(i32 %8)
  %10 = and i32 %9, 65535
  store i32 %10, i32* %1, align 4
  br label %11

11:                                               ; preds = %7, %5
  %12 = load i32, i32* %1, align 4
  ret i32 %12
}

declare dso_local i32 @OCTEON_IS_MODEL(i32) #1

declare dso_local i32 @cvmx_warn(i8*) #1

declare dso_local i32 @cvmx_read_csr(i32) #1

declare dso_local i32 @CVMX_L2C_WPAR_IOBX(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
